--- a/source/locales/desc.txt
+++ b/source/locales/desc.txt
@@ -5,10 +5,10 @@
 "Slim Scrollbar replace default scroll bars with two simple auto-hide bars. These bars are visible only when you scroll the page. So you obtain more space, useful especially for netbooks.
 
 ATTENTION:
-The extension can't automatically turn of the default scrollbars. To do it go in Preferences ▹ Advanced ▹ browsing, and deactivate "show scroll bars".
+The extension can't automatically turn off the default scrollbars. To do so, open Preferences ▹ Advanced ▹ browsing, and deactivate "show scroll bars".
 
-A well-know issue on oldest computers is performance loss during scrolling. You can try to activate "solve slow scrolling" options, but maybe the bars will flicker.
+A well-know issue on oldest computers is performance degredation during scrolling. You can try to activate "solve slow scrolling" options, but this may result in the scrollbars flickering.
 
 If you want to translate this extension you can email me or visit support page.
 
-Thanks to Daniel (https://twitter.com/#!/Aeyoun) for Norwegian bokmål translation and code support."  : ""
+Thanks to Daniel (https://twitter.com/#!/Aeyoun) for the Norwegian bokmål translation and code support."  : ""
