--- a/CHANGELOG
+++ b/CHANGELOG
@@ -41,7 +41,9 @@ Update 0.8-4
  - better options page
  - better icon
  - new translation system
-
-NEXT VERSION:
-excluded docs.google.it
-polish translation
+Update 0.9-2
+ - excluded docs.google.it
+ - polish translation
+Update 0.9-3
+ - german translation
+ - fixed octopress incompatibility
