--- a/src/locales/it/desc.txt
+++ b/src/locales/it/desc.txt
@@ -1,4 +1,4 @@
-"Slim Scrollbar"
+﻿"Slim Scrollbar"
 "Slim Scrollbar"
 
 
@@ -6,7 +6,7 @@
 "Una barra di scorrimento che si nasconde automaticamente"
 
 
-"Slim Scrollbar replace default scroll bars with two simple auto-hide bars. These bars are visible only when you scroll the page. So you obtain more space, useful especially for small screens.
+"Slim Scrollbar replaces default scroll bars with two simple auto-hide bars. These bars are visible only when you scroll the page. So you obtain more space, useful especially for small screens.
 
 ATTENTION:
 The extension can't automatically turn of the default scrollbars. To do it go in Preferences ▹ Advanced ▹ browsing, and deactivate "show scroll bars".
