--- a/src/locales/nb/desc.txt
+++ b/src/locales/nb/desc.txt
@@ -9,8 +9,6 @@ The extension can't automatically turn off the default scrollbars. To do so, ope
 
 A well-know issue on oldest computers is performance degredation during scrolling. You can try to activate "solve slow scrolling" options, but this may result in the scrollbars flickering.
 
-If you want to translate this extension you can email me or visit support page.
-
 Thanks to Daniel (https://twitter.com/#!/Aeyoun) for the Norwegian bokmål translation and code support.
 Thanks to myonno for german translation."
 
@@ -18,12 +16,12 @@ Thanks to myonno for german translation."
 
 "Tynne rullefelt erstatter standard rullefeltet med to enkle rullefelt som skjules automatisk. Disse er kun synlige mens du ruller. Spesielt nyttig på små skjermer.
 
+Jeg har ikke lengre tid til å vedlikeholde denne utvidelsen. Ikke forvent mange oppdateringer fremover.  Du kan prøve en annen utvidelse laget av Christoph142: Modern Scroll.
+
 MERK:
 Utvidelsen kan ikke automatisk skru av standard rullefeltene. For å gjøre det, gå til Instillinger: Avansert: Nettleser og velg bort "Vis rullefelt."
 
 Et kjent problem kan oppstå på gamle maskiner med ytelsestap mens man skruller. Du kan forsøke å løse dette ved å skru på "Korriger treg rulling" valget, men da kan rullefeltene blinke.
-
-Om du ønsker å oversette denne utvidelelsen kan du sende meg en epost eller besøke brukerstøttesiden.
 
 Takk til Daniel (https://twitter.com/#!/Aeyoun) for norsk oversettelsen og kodestøtte.
 Takk til myonno for den tyske oversettelsen."
