--- a/README
+++ b/README
@@ -1,4 +1,2 @@
-DESCRIPTION:
-
-Slim Scrollbar is an extension that replaces Opera's default scroll bars with two simple auto-hide bars.
+Slim Scrollbar is an Opera 11/12 (OEX) extension that replaces default scroll bars with two simple auto-hide bars.
 These bars are visible only when you scroll the page. So you obtain more space, useful especially for netbooks.
